User endpoint naming change
